# cos

./: CMakeLists.txt  cmake.sh  knl_lock_rec_hash.cpp
data/: ctrl2
doc/: create database.txt
etc/: enc.ini  encrypt.ini  server.ini  socks.ini
lib/: libcommon.lib  libstrings.lib  libvio.lib
share/: errmsg.txt
share/english/: errmsg.txt
src/: CMakeLists.txt  cm_defs.h  cm_hashtable.cpp  cm_hashtable.h  cm_row.h  sync_rwlock.cpp  sync_rwlock.h
src/common/: CMakeLists.txt  cm_base64.cpp  cm_biqueue.c  cm_biqueue.cpp  cm_config.c  cm_config.cpp  cm_date.c  cm_date.cpp  cm_datetime.cpp  cm_dbug.c  cm_dbug.cpp  cm_encrypt.cpp  cm_error.c  cm_error.cpp  cm_file.c  cm_file.cpp  cm_getopt.c  cm_hash.c  cm_hash_table.cpp  cm_hashtable.cpp  cm_io_cache.cpp  cm_locale.c  cm_locale.cpp  cm_log.c  cm_log.cpp  cm_md5.c  cm_memory.c  cm_memory.cpp  cm_mutex.c  cm_mutex.cpp  cm_queue.c  cm_queue.cpp  cm_random.cpp  cm_rbt.cpp  cm_rwlock.cpp  cm_string.cpp  cm_text.cpp  cm_thread.c  cm_thread.cpp  cm_thread_group.c  (+11 more)
src/include/common/: cm_atomic.h  cm_attribute.h  cm_base64.h  cm_biqueue.h  cm_config.h  cm_counter.h  cm_date.h  cm_datetime.h  cm_dbug.h  cm_encrypt.h  cm_error.h  cm_file.h  cm_getopt.h  cm_hash.h  cm_hash_table.h  cm_hashtable.h  cm_io_cache.h  cm_list.h  cm_locale.h  cm_log.h  cm_md5.h  cm_memory.h  cm_mutex.h  cm_queue.h  cm_random.h  cm_random.ic  cm_rbt.h  cm_rwlock.h  cm_rwlock.ic  cm_stack.h  cm_string.h  cm_text.h  cm_thread.h  cm_thread.ic  cm_thread_group.h  cm_thread_pool.h  cm_timer.h  cm_timewheel.h  cm_timezone.h  cm_type.h  (+4 more)
src/include/nodes/: nodes.h
src/include/securec/: securec.h  securectype.h
src/include/strings/: decimal.h  m_ctype.h  m_string.h  my_xml.h  template_utils.h
src/include/vio/: vio_epoll.h  vio_epoll_reactor.h  vio_pat.h  vio_socket.h
src/main/: CMakeLists.txt  charset.c  cm_stacktrace.cpp  cm_stacktrace.h  db_init.cpp  files_encrypt.c  files_encrypt.cpp  guc.cpp  guc.h  knl_hander.h  knl_handler.c  main.c  memory_test.cpp  server.cpp  sock_proxy.c  sock_proxy.cpp  test.c  test.cpp
src/os/: CMakeLists.txt  os_base64.c  os_base64.h  os_biqueue.c  os_biqueue.h  os_config.c  os_config.h  os_date.c  os_date.h  os_epoll.c  os_epoll.h  os_epoll_reactor.c  os_epoll_reactor.h  os_file.c  os_file.h  os_getopt.c  os_getopt.h  os_list.h  os_log.c  os_log.h  os_mach.c  os_mach.h  os_md5.c  os_md5.h  os_mutex.c  os_mutex.h  os_pat.c  os_pat.h  os_queue.c  os_queue.h  os_rbt.c  os_rbt.h  os_rijndael.c  os_rijndael.h  os_rijndael.txt  os_thread.c  os_thread.h  os_thread_group.c  os_thread_group.h  os_thread_pool.c  (+6 more)
src/securec/: CMakeLists.txt  fscanf_s.cpp  fwscanf_s.cpp  memcpy_s.cpp  memmove_s.cpp  scanf_s.cpp  sprintf_s.cpp  sscanf_s.cpp  swprintf_s.cpp  swscanf_s.cpp  vfscanf_s.cpp  vfwscanf_s.cpp  vscanf_s.cpp  vsprintf_s.cpp  vsscanf_s.cpp  vswprintf_s.cpp  vswscanf_s.cpp  vwscanf_s.cpp  wscanf_s.cpp
src/socks/: CMakeLists.txt  files_encrypt.c  sock_proxy.c
src/sql/parser/: sql_parser.cpp  sql_parser.h
src/storage/: fut0lst.c  fut0lst.h  fut0lst.ic  knl_btree.cpp  knl_btree.h  knl_buf.cpp  knl_buf.h  knl_buf_flush.cpp  knl_buf_flush.h  knl_buf_lru.cpp  knl_buf_lru.h  knl_checkpoint.cpp  knl_checkpoint.h  knl_ctrl_file.cpp  knl_ctrl_file.h  knl_data.cpp  knl_data.h  knl_data_type.cpp  knl_data_type.h  knl_datatype.h  knl_dblwrite.cpp  knl_dblwrite.h  knl_defs.h  knl_dict.cpp  knl_dict.h  knl_fast_clean.cpp  knl_fast_clean.h  knl_file_system.cpp  knl_file_system.h  knl_flst.cpp  knl_flst.h  knl_fsp.cpp  knl_fsp.h  knl_handler.cpp  knl_hash_table.cpp  knl_hash_table.h  knl_heap.cpp  knl_heap.h  knl_heap_fsm.cpp  knl_heap_fsm.h  (+51 more)
src/storage/include/: knl_handler.h  knl_server.h
src/strings/: CMakeLists.txt  bchange.cpp  conf_to_src.cc  conf_to_src.cpp  ctype-big5.cc  ctype-big5.cpp  ctype-bin.cc  ctype-bin.cpp  ctype-cp932.cc  ctype-cp932.cpp  ctype-czech.cc  ctype-czech.cpp  ctype-euc_kr.cc  ctype-euc_kr.cpp  ctype-eucjpms.cc  ctype-eucjpms.cpp  ctype-extra.cc  ctype-extra.cpp  ctype-gb18030.cc  ctype-gb18030.cpp  ctype-gb2312.cc  ctype-gb2312.cpp  ctype-gbk.cc  ctype-gbk.cpp  ctype-latin1.cc  ctype-latin1.cpp  ctype-mb.cc  ctype-mb.cpp  ctype-simple.cc  ctype-simple.cpp  ctype-sjis.cc  ctype-sjis.cpp  ctype-tis620.cc  ctype-tis620.cpp  ctype-uca.cc  ctype-uca.cpp  ctype-ucs2.cc  ctype-ucs2.cpp  ctype-ujis.cc  ctype-ujis.cpp  (+43 more)
src/vio/: CMakeLists.txt  vio_epoll.c  vio_epoll.cpp  vio_epoll_reactor.c  vio_epoll_reactor.cpp  vio_pat.c  vio_pat.cpp  vio_socket.c  vio_socket.cpp
test/client/: client.c  client.sln  client.vcxproj
test/client/Debug/: client.ilk  vc140.idb
test/client/Debug/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
test/common_test/: CMakeLists.txt  test_aes.cpp  test_charset.cpp  test_hash_table.cpp  test_mem_pool.cpp  test_vm_pool.cpp
test/safeclib_test/: CMakeLists.txt  test_safec_str.cpp
test/strings_test/: conf_to_src.cpp  do_ctype.cpp  uca-dump.cpp  uctypedump.cpp
third_lib/openssl-1.1.1/win_lib/: libssl.lib
third_lib/securec/include/: securec.h
third_lib/securec/lib/win/: libsecurec.lib
third_lib/securec/source/: CMakeLists.txt  cmake.sh  make.sh
third_lib/securec/source/libsecure/: libsecure.vcxproj
third_lib/securec/source/src/: CMakeLists.txt  snprintf_s.c  sprintf_s.c
third_lib/securec/source/test/: CMakeLists.txt  test_memory.cpp
third_lib/securec/source/win/: win.sln  win.vcxproj
win/: win.sln  win.vcxproj  win.vcxproj.filters
win/libcommon/: libcommon.vcxproj  libcommon.vcxproj.filters
win/libcommon/x64/Debug/: libcommon.idb
win/libsecurec/: libsecurec.vcxproj  libsecurec.vcxproj.filters
win/libsql/: libsql.vcxproj  libsql.vcxproj.filters
win/libstorage/: libstorage.vcxproj  libstorage.vcxproj.filters
win/libstorage/x64/Debug/: libstorage.idb
win/libstrings/: libstrings.vcxproj  libstrings.vcxproj.filters
win/libstrings/x64/Debug/: libstrings.idb
win/libvio/: libvio.vcxproj  libvio.vcxproj.filters
win/test/: test.vcxproj  test.vcxproj.filters
(+29 files in other folders)
